# hserver

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  compose.yaml  diesel.toml
.github/workflows/: ci.yml
api/: Cargo.toml
api/src/: auth.rs  lib.rs  main.rs  openapi.rs
api/src/dtos/: mod.rs
api/src/errors/: mod.rs
api/src/v1/: mod.rs
api/src/v1/auth/: dtos.rs  mod.rs  routes.rs
api/src/v1/rooms/: dtos.rs  errors.rs  mod.rs  routes.rs
api/src/v1/search/: dtos.rs  errors.rs  mod.rs  routes.rs
api/src/v1/users/: dtos.rs  errors.rs  get.rs  mod.rs  routes.rs
app/: Cargo.toml
app/src/: api.rs  lib.rs  settings.rs
app/src/auth/: login.rs  mod.rs  onboard.rs
app/src/rooms/: availability.rs  classes.rs  details.rs  find.rs  list.rs  mod.rs
app/src/users/: details.rs
config/: default.toml  development.toml  production.toml
core/: Cargo.toml
core/src/: lib.rs
core/src/entities/: booking.rs  mod.rs  user.rs
core/src/ports/: repositories.rs
docs/: plan.md  plan1.md  plan2.md  setup.md  style.md
domain/: Cargo.toml
domain/src/: interval.rs  lib.rs
infra/: Cargo.toml
infra/src/: lib.rs
infra/src/db/: mod.rs
infra/src/domains/: mod.rs
infra/src/domains/auth/: mod.rs
infra/src/domains/room/: mod.rs
infra/src/domains/user/: mod.rs
infra/src/models/: mod.rs
infra/src/schema/: mod.rs
infra/src/services/: imagekit.rs  mod.rs
infra/tests/: concurrency_test.rs
infrastructure/: Cargo.toml
infrastructure/src/: db.rs  lib.rs  schema.rs
infrastructure/src/models/: mod.rs
infrastructure/src/schema/: mod.rs
infrastructure/tests/: concurrency_test.rs
migration_runner/: Cargo.toml
migration_runner/src/: lib.rs  main.rs
migrations/2024-11-15-000000_create_users/: up.sql
migrations/2025-11-15-173052-0000_create_hotel_management_schema/: down.sql  up.sql
migrations/2025-11-19-234531_create_v2_schema/: down.sql  up.sql
migrations/2025-11-21-013625-0000_create_core_tables/: down.sql  up.sql
migrations/2025-11-24-104011-0000_triggers/: down.sql  up.sql
migrations/2025-11-24-144011-0000_users/: up.sql
migrations/2025-11-24-181728-0000_room_classes_table/: down.sql  up.sql
migrations/2025-11-24-182033-0000_amenities/: down.sql  up.sql
migrations/2025-11-24-182318-0000_rooms/: down.sql  up.sql
migrations/2025-11-24-193040-0000_staff/: down.sql  up.sql
migrations/2025-11-24-203328-0000_room_classes_amenities/: down.sql  up.sql
migrations/2025-11-24-203546-0000_blocks/: down.sql  up.sql
migrations/2025-11-24-203714-0000_bookings/: down.sql  up.sql
migrations/2025-11-24-204045-0000_housekeeping/: down.sql  up.sql
migrations/2025-11-24-204045-0000_maintenance/: down.sql  up.sql
migrations/2025-11-24-204205-0000_maintenance/: down.sql  up.sql
migrations/2025-11-24-204205-0000_out_of_service/: down.sql  up.sql
migrations/2025-11-24-204205-0000_reports/: up.sql
migrations/2025-11-24-210450-0000_out_of_service/: down.sql
migrations/2025-11-24-210450-0000_reports/: up.sql
migrations/2025-11-30-165935-0000_otps/: down.sql  up.sql
migrations/2025-12-18-120000_media_tables/: down.sql  up.sql
migrations/2025-12-24-080204-0000_media/: up.sql
migrations/2025-12-24-080254-0000_transactions/: down.sql  up.sql
migrator/: Cargo.toml
migrator/src/: lib.rs  main.rs
scripts/: seed.sql
src/: config.rs  constants.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  response.rs  schema.rs  tests.rs
src/app/: config.rs  mod.rs
src/app/drivers/: routes.rs
src/app/drivers/middlewares/: mod.rs
src/app/features/auth/: handlers.rs
src/app/features/user/: entities.rs  repository.rs
src/utils/: db.rs  di.rs
