[workspace]
members = [
    "domain",
    "infrastructure",
    "api",
    "migration_runner"
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.12.1"
chrono = "0.4"
config = "0.15.19"
diesel = "2.3.4"
diesel-derive-enum = "2.1.0"
diesel-async = "0.7"
dotenvy = "0.15"
rustls = "0.23"
serde = "1.0"
serde_json = "1"
tokio = "1"
uuid = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

domain = { path = "domain" }
infrastructure = { path = "infrastructure" }
