[package]
name = "hserver"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "app",
    "infra",
    "api",
    "migrator"
]
resolver = "2"

[workspace.dependencies]
actix-web = "4.12.1"
chrono = "0.4"
config = "0.15.19"
diesel = "2.3.4"
diesel-derive-enum = "2.1.0"
diesel-async = "0.7"
dotenvy = "0.15"
rustls = "0.23"
serde = "1.0"
serde_json = "1"
tokio = "1"
uuid = "1.19.0"
futures-util = "0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
rand = "0.9.2"
bigdecimal = "0.4.9"
derive_more = "2.1.1"
app = { path = "app" }
infra = { path = "infra" }

[dependencies]
api = { path = "api" }
app = { path = "app" }
infra = { path = "infra" }
migrator = { path = "migrator" }
actix-web = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["full"] }
config = { workspace = true }
