[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true, features = ["secure-cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
domain = { workspace = true }
infrastructure = { workspace = true }
bincode = "2.0.1"
base64 = "0.22.1"
chrono = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
