[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { workspace = true, features = ["secure-cookies"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }
domain = { workspace = true }
infrastructure = { workspace = true }
diesel = { workspace = true, features = ["chrono", "uuid"] }
diesel-async = { workspace = true }
bincode = "2.0.1"
base64 = "0.22.1"
chrono = { workspace = true }
futures-util = { workspace = true }
uuid = { workspace = true }
validators = { version = "0.25", features = ["uuid"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
derive_more = { version = "2.0.1", features = ["display", "error"] }
chacha20poly1305 = "0.10"
rand = { workspace = true }
argon2 = "0.5.3"
tracing-actix-web = "0.7.19"
bigdecimal = { workspace = true, features = ["serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["actix-web"] }
