[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
chrono = { workspace = true, features = ["serde"] }
actix-web = { workspace = true }
bitcode = { version = "0.6.9", features = ["uuid"] }
bigdecimal = { workspace = true, features = ["serde"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "chrono", "uuid"] }
argon2 = "0.5.3"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
