[package]
name = "infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2", features = ["postgres_backend", "chrono", "uuid", "numeric"] }
diesel-async = { version = "0.5", features = ["postgres", "deadpool"] }
deadpool = "0.10"
futures = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
[dev-dependencies]
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
rustls = "0.23"
webpki-roots = "0.26"
