[package]
name = "infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
diesel = { workspace = true, features = ["postgres_backend", "chrono", "uuid", "numeric"] }
diesel-async = { workspace = true, features = ["postgres", "deadpool"] }
deadpool = "0.12"
tokio-postgres-rustls = "0.13"
tokio-postgres = "0.7"
rustls = { workspace = true }
rustls-platform-verifier = "0.6.2"
webpki-roots = "1.0.4"
futures = "0.3"
uuid = { workspace = true, features = ["v4"] }
chrono = { workspace = true }
domain = { workspace = true }
config = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenvy = { workspace = true }


